ensure buttons aren't bolded even when wrapped by label

--- a/src/ui/button/src/button.css
+++ b/src/ui/button/src/button.css
@@ -1,4 +1,5 @@
 .common {
+  font-weight: normal;
   border: none;
   border-radius: 2px;
   height: 27px;
